<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBC6C6"
    tools:context=".CurrentOrder">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/currentOrderRecyclerView"
            android:layout_width="397dp"
            android:layout_height="371dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintBottom_toTopOf="@+id/currentOrderSubTotal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/currentOrderOrderNumberHeading"
            android:layout_width="150dp"
            android:layout_height="29dp"
            android:layout_marginStart="83dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/OrderNumber"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/currentOrderOrderNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/currentOrderOrderNumber"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="134dp"
            android:layout_marginBottom="5dp"
            android:text="@string/CurrentOrderNumber"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/currentOrderRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/currentOrderOrderNumberHeading"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/currentOrderSubTotalHeading"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="11dp"
            android:text="@string/Subtotal"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/currentOrderSubTotal"
            app:layout_constraintTop_toBottomOf="@+id/currentOrderRecyclerView" />

        <TextView
            android:id="@+id/currentOrderSalesTaxHeading"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="11dp"
            android:text="@string/SalesTax"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/currentOrderSalesTax"
            app:layout_constraintTop_toBottomOf="@+id/currentOrderSubTotalHeading" />

        <TextView
            android:id="@+id/currentOrderOrderTotalHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="11dp"
            android:text="@string/OrderTotal"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/currentOrderOrderTotal"
            app:layout_constraintTop_toBottomOf="@+id/currentOrderSalesTaxHeading" />

        <Button
            android:id="@+id/currentOrderClearOrderButton"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="55dp"
            android:text="@string/ClearOrder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/currentOrderPlaceOrderButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentOrderOrderTotalHeading"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/currentOrderPlaceOrderButton"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="55dp"
            android:text="@string/PlaceOrder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/currentOrderClearOrderButton"
            app:layout_constraintTop_toBottomOf="@+id/currentOrderOrderTotal"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/currentOrderSalesTax"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="78dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/CurrentSalesTax"
            app:layout_constraintBottom_toTopOf="@+id/currentOrderOrderTotal"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/currentOrderSubTotal"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="78dp"
            android:layout_marginBottom="6dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/CurrentSubTotal"
            app:layout_constraintBottom_toTopOf="@+id/currentOrderSalesTax"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/currentOrderOrderTotal"
            android:layout_width="122dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="78dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/CurrentOrderTotal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentOrderSalesTax"
            tools:ignore="TouchTargetSizeCheck" />

        <View
            android:id="@+id/topDivider"
            android:layout_width="409dp"
            android:layout_height="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="1dp"
            android:background="@color/maroon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentOrderOrderNumberHeading" />

        <View
            android:id="@+id/middleDivider"
            android:layout_width="409dp"
            android:layout_height="5dp"
            android:background="@color/maroon"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="430dp" />

        <View
            android:id="@+id/bottomDivider"
            android:layout_width="409dp"
            android:layout_height="5dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="1dp"
            android:background="@color/maroon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentOrderOrderTotal" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>