<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="197dp"
            android:background="@color/maroon">

            <TextView
                android:id="@+id/priceTextView"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:layout_marginStart="56dp"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="38dp"
                android:text="@string/PizzaPrice"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/toppingsTextView"
                app:layout_constraintTop_toBottomOf="@+id/sizeTextView" />

            <TextView
                android:id="@+id/sizeTextView"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_marginStart="56dp"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="44dp"
                android:layout_marginBottom="35dp"
                android:text="@string/PizzaSize"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/priceTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/toppingsTextView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/toppingsTextView"
                android:layout_width="125dp"
                android:layout_height="158dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="23dp"
                android:text="@string/PizzaToppings"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/currentOrderRemoveButton"
                app:layout_constraintStart_toEndOf="@+id/flavorToppingsDivider"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/styleAndCrustTextView"
                android:layout_width="117dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="12dp"
                android:text="@string/PizzaStyleAndCrust"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/flavorTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/flavorTextView"
                android:layout_width="88dp"
                android:layout_height="39dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="77dp"
                android:text="@string/PizzaFlavor"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/currentOrderRemoveButton"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="2dp"
                android:text="@string/Remove"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/toppingsSizeDivider"
                app:layout_constraintTop_toBottomOf="@+id/priceTextView"
                app:layout_constraintVertical_bias="0.382" />

            <View
                android:id="@+id/flavorToppingsDivider"
                android:layout_width="5dp"
                android:layout_height="195dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/toppingsTextView"
                app:layout_constraintStart_toEndOf="@+id/styleAndCrustTextView"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/toppingsSizeDivider"
                android:layout_width="5dp"
                android:layout_height="195dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/currentOrderRemoveButton"
                app:layout_constraintHorizontal_bias="0.23"
                app:layout_constraintStart_toEndOf="@+id/toppingsTextView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>