<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBC6C6"
    tools:context=".StoreOrders">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/storeOrderOrderNumberHeader"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="101dp"
            android:layout_marginTop="49dp"
            android:layout_marginBottom="13dp"
            android:text="@string/AllOrderNumber"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/topStoreDivider"
            app:layout_constraintEnd_toStartOf="@+id/storeOrderSpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/storeOrderSpinner"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="49dp"
            android:layout_marginEnd="59dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/topStoreDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/storeOrderOrderNumberHeader"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/storeOrderRecyclerView"
            android:layout_width="395dp"
            android:layout_height="344dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@+id/middleStoreDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topStoreDivider" />

        <TextView
            android:id="@+id/storeOrderOrderTotalHeader"
            android:layout_width="174dp"
            android:layout_height="31dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="47dp"
            android:layout_marginBottom="28dp"
            android:text="@string/AllOrderTotal"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/bottomStoreDivider"
            app:layout_constraintEnd_toStartOf="@+id/storeOrderOrderTotal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/middleStoreDivider" />

        <EditText
            android:id="@+id/storeOrderOrderTotal"
            android:layout_width="159dp"
            android:layout_height="44dp"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="49dp"
            android:layout_marginBottom="28dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/StoreOrderNumber"
            app:layout_constraintBottom_toTopOf="@+id/bottomStoreDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/storeOrderOrderTotalHeader"
            app:layout_constraintTop_toBottomOf="@+id/middleStoreDivider" />

        <Button
            android:id="@+id/cancelOrderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="132dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="132dp"
            android:layout_marginBottom="56dp"
            android:text="@string/CancelOrder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottomStoreDivider" />

        <View
            android:id="@+id/topStoreDivider"
            android:layout_width="409dp"
            android:layout_height="5dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="5dp"
            android:background="@color/maroon"
            app:layout_constraintBottom_toTopOf="@+id/storeOrderRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storeOrderSpinner" />

        <View
            android:id="@+id/middleStoreDivider"
            android:layout_width="409dp"
            android:layout_height="5dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="5dp"
            android:background="@color/maroon"
            app:layout_constraintBottom_toTopOf="@+id/storeOrderOrderTotal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storeOrderRecyclerView" />

        <View
            android:id="@+id/bottomStoreDivider"
            android:layout_width="409dp"
            android:layout_height="5dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="5dp"
            android:background="@color/maroon"
            app:layout_constraintBottom_toTopOf="@+id/cancelOrderButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storeOrderOrderTotalHeader" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>